fix off centered buttons in main page

--- a/frontend/src/components/Body/Body.css
+++ b/frontend/src/components/Body/Body.css
@@ -250,4 +250,7 @@
   }
 }
 @media screen and (max-width: 385px) {
+  .hero-left .btn-wrapper {
+    justify-content: center;
+  }
 }
